<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">SmartHome</string>
	<string name="title_activity_command">CommandActivity</string>
	<string name="command_label">Command name</string>    
	<string name="command_title_hint">Enter a name for this command</string>
	<string name="command_details_label">Details</string>
	<string name="command_who_label">Interface</string>
	<string name="command_who_hint">Enter automation type</string>
	<string name="command_where_label">Address</string>
	<string name="command_where_hint">Enter mechanism address</string>
	<string name="network_label">Network</string>
	<string name="connector_ip_label"> IP address</string>
	<string name="connector_ip_hint"> IP address of the server</string>
	<string name="connector_ip_error">Enter a valid IP address</string>
	<string name="connector_no_ip">Server IP Address required</string>
	<string name="connector_host_unreachable">Host unreachable</string>
    <string name="connector_ip_required">Ip address of the server missing</string>
	<string name="new_command">New command</string>
	<string name="delete_command">Delete command</string>
	<string name="edit_command">Edit command</string>
	<string name="settings">Settings</string>
	<string name="commandgridfragment_all_commands">All</string>
    <string name="commandgridfragment_network_inactive_out_of_range">Network connection inactive  or ip address out of range</string>
	<string-array name="who_array">
	    <item>Scenarios</item>
	    <item>Lighting</item>
	    <item>Automatism</item>
	    <item>Electrical loads</item>
	    <item>Warming management</item>
	    <item>Antitheft</item>
	    <item>Basic video doorphone</item>
	    <item>Gateway management</item>
	    <item>CEN commands</item>
	    <item>Sound diffusion</item>
	    <item>Sound diffusion 2</item>
	    <item>MH200N scenarios</item>
	    <item>Power management</item>
	    <item>CEN plus etc</item>
	    <item>Automation diagnostics</item>
	    <item>Thermoregulation diagnostics</item>
	    <item>Device diagnostics</item>
	    </string-array>
</resources>
