<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical" >

    <TextView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/command_label"
        style="?android:listSeparatorTextViewStyle"/>
    <EditText 
        android:id="@+id/command_title_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/command_title_hint"
        android:layout_marginBottom="10dp"
        android:inputType="textAutoCorrect"/>
    <TextView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/command_details_label"
        style="?android:listSeparatorTextViewStyle"/>
    <TextView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/command_who_label"
        android:layout_marginLeft="5dp"/>
    <Spinner 
        android:id="@+id/command_who_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/command_who_hint"/>
    <TextView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/command_where_label"
        android:layout_marginLeft="5dp"/>
     <Spinner 
        android:id="@+id/command_where_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/command_where_hint"/>
</LinearLayout>
